# VaultTecInventory

./: .coveragerc  .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  infrastructure.db  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js
frontend/src/components/: Dashboard.js  Login.js  Navbar.js  ProductForm.js
src/inventory/application/: product_create.py  product_delete.py  product_list.py  product_update.py
src/inventory/domain/: entities.py
src/inventory/domain/ports/: product_repo.py  unit_of_work.py
src/inventory/infrastructure/db/: sqlite_db.py
src/inventory/infrastructure/db/postgres_raw/: repo.py
src/inventory/infrastructure/db/sqlite_raw/: repo.py
src/inventory/interfaces/http/: api.py  auth.py  deps.py  router.py  security.py
src/inventory/interfaces/http/schemas/: products.py
src/inventory/usecases/: product_create.py  product_delete.py  product_list.py  product_update.py
tests/: test_schemas.py  test_security_auth.py  test_usescases.py  test_usescases_inmemory.py
