[project]
name = "inventory-clean"
version = "0.1.0"
description = "DB-agnostic inventory backend with Clean Architecture"
authors = [{ name = "Edwin C", email = "cubillos.dev.bk@gmail.com" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.117.1,<0.118.0",
  "uvicorn>=0.37.0,<0.38.0",
  "sqlalchemy>=2.0.43,<3.0.0",
  "pydantic>=2.11.9,<3.0.0",
  "python-dotenv>=1.1.1,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [
  { include = "inventory", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --maxfail=1 --cov=inventory --cov-report=term-missing"